Prefer === for comparison

--- a/02/02.html
+++ b/02/02.html
@@ -29,7 +29,7 @@
             td = document.createElement("td");
             tr.appendChild(td);
 
-            if ((i == j) || (i == size - j - 1)) {
+            if ((i === j) || (i === size - j - 1)) {
               $(td).addClass("diagonal");
             }
           }
