--- a/01/01.html
+++ b/01/01.html
@@ -3,6 +3,7 @@
 <html>
   <head>
     <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.4.js"></script>
+    <link rel="stylesheet" href="../common.css"/>
     <link rel="stylesheet" href="style.css"/>
   </head>
   <body>
