--- a/02/02.html
+++ b/02/02.html
@@ -4,7 +4,7 @@
   <head>
     <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.4.js"></script>
     <link rel="stylesheet" href="../common.css"/>
-    <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="02.css"/>
   </head>
   <body>
     <input type="text" id="size" placeholder="Size" autofocus/>
