--- a/01/01.html
+++ b/01/01.html
@@ -4,7 +4,7 @@
   <head>
     <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.4.js"></script>
     <link rel="stylesheet" href="../common.css"/>
-    <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="01.css"/>
   </head>
   <body>
     <input id="date" type="text" placeholder="Type a date" autofocus/>
