Clarify placeholder text

--- a/02/02.html
+++ b/02/02.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="02.css"/>
   </head>
   <body>
-    <input type="text" id="size" placeholder="Size" autofocus/>
+    <input type="text" id="size" placeholder="Grid Size" autofocus/>
     <div id="tableParent"/>
 
     <script type="text/javascript">
