Remove limit on table size

--- a/02/02.html
+++ b/02/02.html
@@ -53,7 +53,7 @@
         var $tableParent = $("#tableParent");
         $tableParent.empty();
 
-        if ((size > 0) && (size < 21)) {
+        if (size > 0) {
           $tableParent.append(makeTable(size));
         }
       }
