Update date converter style for consistency

--- a/01/01.html
+++ b/01/01.html
@@ -8,14 +8,14 @@
     <link rel="stylesheet" href="01.css"/>
   </head>
   <body>
-    <input id="date" type="text" placeholder="Type a date" autofocus/>
-    <div id="dayofyear"></div>
-    <div id="examples">
-      <a href="#">Jul 4, 1776</a><br/>
-      <a href="#">November 19, 1863</a><br/>
-      <a href="#">1929-01-15</a><br/>
+    <input id="date" type="text" placeholder="Date" autofocus/>
+    <span id="dayofyear"></span><br/>
+    <span id="examples">
+      Examples:
+      <a href="#">Jul 4, 1776</a>,
+      <a href="#">1929-01-15</a>,
       <a href="#">7/20/1969</a>
-    </div>
+    </span>
 
     <script type="text/javascript">
 
