--- a/01/01.html
+++ b/01/01.html
@@ -3,6 +3,7 @@
 <html>
   <head>
     <meta charset="UTF-8"/>
+    <title>1. Date Converter</title>
     <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.4.js"></script>
     <link rel="stylesheet" href="../common.css"/>
     <link rel="stylesheet" href="01.css"/>
