--- a/02/02.html
+++ b/02/02.html
@@ -3,6 +3,7 @@
 <html>
   <head>
     <meta charset="UTF-8"/>
+    <title>2. X Marks the Spot</title>
     <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.4.js"></script>
     <link rel="stylesheet" href="../common.css"/>
     <link rel="stylesheet" href="02.css"/>
