--- a/03/03.html
+++ b/03/03.html
@@ -3,6 +3,7 @@
 <html>
   <head>
     <meta charset="UTF-8"/>
+    <title>3. Adding Binary Numbers</title>
     <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.4.js"></script>
     <link rel="stylesheet" href="../common.css"/>
     <link rel="stylesheet" href="03.css"/>
