Question 5: Is My Friend Cheating?

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
       <li>
         <a href="03/03.html">Adding Binary Numbers</a>
       </li>
+      <li>
+        <a href="05/05.html">Is My Friend Cheating?</a>
+      </li>
     </ol>
   </body>
 </html>
