Add missing question

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
         <a href="03/03.html">Adding Binary Numbers</a>
       </li>
       <li>
+        String Combinations (aka substrings)
+      </li>
+      <li>
         <a href="05/05.html">Is My Friend Cheating?</a>
       </li>
     </ol>
