--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <a href="03/03.html">Adding Binary Numbers</a>
       </li>
       <li>
-        String Combinations (aka substrings)
+        <a href="04/04.html">String Combinations (aka substrings)</a>
       </li>
       <li>
         <a href="05/05.html">Is My Friend Cheating?</a>
